Added companies endpoints
