# dtos/response/company_response_dto.go
@@ -1,0 +1,7 @@
+package responseDTOs
+
+type CompanyResponseDTO struct {
+	ID   uint   `json:"id" example:"1"`
+	Name string `json:"name" example:"Tech Company"`
+}
+
